Fix hack for window resize on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,8 @@
 
 @media only screen and (max-width: 479px) {
   .App {
-    position: fixed
+    position: fixed;
+    max-width: 100vw;
   }
 }
 
